src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-ofT-dwF1000-dhF500-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen floating: true\ndefault column width: F1000\ndefault window height: F500\nborder on\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
